feat(mvp): added naming convention